--- a/0.2/ios/www/css/moobile.ios.css
+++ b/0.2/ios/www/css/moobile.ios.css
@@ -9,7 +9,7 @@
 -----------------------------------------------------------------------------*/
 
 
-body {
+body {-
 	font-family: "Helvetica Neue", sans-serif;
 }
 
